--- a/style/style.css
+++ b/style/style.css
@@ -75,6 +75,7 @@ nav li {
 main{
     max-width: 1140px;
     margin: 0 auto;
+    width: 100%;
 }
 
 .About{
@@ -83,19 +84,18 @@ main{
     border-radius: 10px;
     padding: 130px 150px;
     text-align: center;
-
 }
 .section-title{
     text-align: center;
     font-size: 35px;
     font-weight: 700;
-    margin-bottom: 30px;
+    margin-bottom: 50px;
 
 }
 .section-description{
     color: #757575;
     font-size: 18px;
-    margin-bottom: 30px;
+    margin-bottom: 40px;
 }
 .About-info-container{
     display: flex;
@@ -110,6 +110,58 @@ main{
     font-size: 20px;
     font-weight: 700;
     color: #474747;
+}
+.what-i-do{
+    margin-top: 130px;
+}
+
+.skills-container{
+    display: flex;
+    gap: 24px;
+}
+.skills{
+    background: #FFFFFF;
+    box-shadow: 0px 6px 50px rgba(0, 0, 0, 0.05);
+    border-radius: 5px;
+}
+.skills-title{
+    font-size: 20px;
+    font-weight: 700;
+    margin-top: 30px;
+    margin-bottom: 20px;
+}
+.skills-description{
+    color: #757575;
+}
+.resume-content{
+    display: flex;
+    gap: 24px;
+}
+.resume .title{
+    font-weight: 700;
+    font-size: 25px;
+    color: #474747;
+    margin-bottom: 10px;
+
+}
+.resume .sub-title{
+    color: #757575;
+    font-size: 20px;
+    font-weight: 600;
+    margin-bottom: 20px;
+
+}
+.resume .description{
+    color: #757575;
+
+}
+.resume-item{
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+.resume-btn{
+    margin-top: 50px;
+    text-align: center;
 }
 
 
