--- a/style/style.css
+++ b/style/style.css
@@ -17,6 +17,16 @@
     border: none;
     padding: 18px 35px;
 }
+.btn-primary2{
+    color: #FFFFFF;
+    font-weight: 700;
+    height: 64px;
+    border-radius: 5px;
+    background:#FD6E0A;
+    border: none;
+    padding: 18px 35px;
+    margin-left: 50px;
+}
 
 .header{
     background: #FFF8F3;
